--- a/client/index.html
+++ b/client/index.html
@@ -5,15 +5,20 @@
     <title>Ducks</title>
 
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="vendor/toastr/toastr.min.css">
+    <link rel="stylesheet" href="vendor/datetimepicker/css/datetimepicker.css">
     <link rel="stylesheet" href="css/style.css">
 
+    <script src="vendor/moment/moment-with-locales.min.js"></script>
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/angular/angular-route.min.js"></script>
     <script src="vendor/angular/angular-resource.min.js"></script>
     <script src="vendor/angular/angular-animate.min.js"></script>
     <script src="vendor/angular/ui-bootstrap.js"></script>
     <script src="vendor/toastr/toastr.min.js"></script>
+    <script src="vendor/datetimepicker/js/datetimepicker.js"></script>
+    <script src="vendor/datetimepicker/js/datetimepicker.templates.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/services/duckService.js"></script>
